{
    "name": "PlayerInputActions",
    "maps": [
        {
            "name": "Player",
            "id": "3c8bdf11-9726-4c16-8813-010d1658b4c2",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "f7dc3691-96ba-49ba-9dd8-21ba1b11baa2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "6aa233fa-5db7-4f34-8379-df3361c85e04",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "MouseScrollY",
                    "type": "PassThrough",
                    "id": "38236d96-bed4-44a5-9424-c042d15e98e3",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Value",
                    "id": "642108c6-ca7b-425f-885f-66ceb1dccc29",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Crouch",
                    "type": "Value",
                    "id": "887e9c46-2e79-4991-9cca-3749778c7274",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Interact",
                    "type": "Value",
                    "id": "b1d2f7a8-b591-4a18-ab02-c1d3855c24f7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "AltInteract",
                    "type": "Value",
                    "id": "b1aff9c7-b826-48b1-8b51-4c9d4dcb300a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "InventoryToggle",
                    "type": "Value",
                    "id": "48f6d2b5-b27a-4578-9ce8-111807a86dd7",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "4b62cee0-9791-4fd3-a163-10cb0c82ba69",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "f2e4fd9f-b9c7-426c-a3c7-90c90657fddb",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e10da09f-6bae-40bf-aa60-a722e2487a32",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "141886cf-49b7-4ced-9fdf-b0b4f506459d",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a10aa710-83f9-412b-bb99-2ef0bbcefc90",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "2D Vector",
                    "id": "16c3fafe-2aee-44db-b192-64b60ff58dd3",
                    "path": "2DVector(mode=2)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "7cb12235-b209-40c0-b066-8f98064e9d85",
                    "path": "<Mouse>/delta/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "e6e51ac1-548c-448a-98d7-8fe559bebfec",
                    "path": "<Mouse>/delta/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "b25d94d8-059f-4243-999e-f0cc4b344f06",
                    "path": "<Mouse>/delta/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "a73766d4-f2e9-4002-874e-0b75d72862a2",
                    "path": "<Mouse>/delta/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "0094b47e-1a1e-49f7-b796-adf00174fa10",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MouseScrollY",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "63f1c93c-9fac-4c47-a014-a389155f7dc7",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5fea0282-7323-4b08-b491-202c7a37fa9c",
                    "path": "<Keyboard>/leftCtrl",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "d358a0fd-2f8f-4f2a-b5ba-f29a2ebeeee1",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "46ed8356-9e89-4004-8fd4-18c1f2bdbede",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "InventoryToggle",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f9182158-f354-4fe7-826b-f2f7d27f2baa",
                    "path": "<Keyboard>/g",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "AltInteract",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "StarMap",
            "id": "8d827b4a-e0e1-4ae8-82c3-01d240c2c686",
            "actions": [
                {
                    "name": "Accelerate",
                    "type": "Value",
                    "id": "d1ea373d-aafd-4587-a977-c3c6e4affa90",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateLeft",
                    "type": "Value",
                    "id": "21757ad4-53f5-4c52-99cd-16621f90e48d",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "RotateRight",
                    "type": "Value",
                    "id": "ebec7ac2-5369-4854-9b04-366d8393c524",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Exit",
                    "type": "Button",
                    "id": "fbbcf4ce-5605-4eb7-9fd8-e42a60c120cb",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6351e6a0-2f93-44d8-8b1b-c22bf2b14f1d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Accelerate",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "989759bd-8137-4657-91c5-0a0ff635fdab",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "638e4c0d-d641-4fb4-a5cb-ba0448bbfcd3",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "RotateRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7b90c2b-bfe7-4185-942a-0cbbfa04ddb2",
                    "path": "<Keyboard>/escape",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Exit",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}